unpackaged/main/default/objects/Avalara_Tax_Configuration__mdt/Avalara_Tax_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Avalara Tax Configuration</label>
    <pluralLabel>Avalara Tax Configurations</pluralLabel>
</CustomObject>