unpackaged/main/default/objects/Avalara_Tax_Configuration__mdt/fields/Line_Item_Monitored_Fields__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Monitored_Fields__c</fullName>
    <label>Line Item Monitored Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>