unpackaged/main/default/objects/Avalara_Tax_Configuration__mdt/fields/Line_Item_Parent_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Parent_Field_API_Name__c</fullName>
    <label>Line Item Parent Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>