unpackaged/main/default/objects/Avalara_Tax_Configuration__mdt/fields/Parent_Monitored_Fields__c.field-meta.xml
<CustomField>
    <fullName>Parent_Monitored_Fields__c</fullName>
    <label>Parent Monitored Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>