unpackaged/main/default/objects/Avalara_Tax_Configuration__mdt/fields/Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_API_Name__c</fullName>
    <label>Parent Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>