unpackaged/main/default/objects/Avalara_Tax_Configuration__mdt/fields/Tax_Calculator_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calculator_Class_Name__c</fullName>
    <label>Tax Calculator Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>